--- a/basemodule/src/main/res/values/strings.xml
+++ b/basemodule/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">BaseModule</string>
+    <string name="iv_key">aaaabbbcccddd</string>
+
+    <string name="test_cryptkey">crypt_key</string>
+
+
 </resources>
